--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | unicame</title>
+    <title>Unity WebGL Player | unic</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">unicame</div>
+        <div id="unity-build-title">unic</div>
       </div>
     </div>
     <script>
@@ -56,14 +56,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Unimo.loader.js";
+      var loaderUrl = buildUrl + "/UNimoba.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Unimo.data",
-        frameworkUrl: buildUrl + "/Unimo.framework.js",
-        codeUrl: buildUrl + "/Unimo.wasm",
+        dataUrl: buildUrl + "/UNimoba.data",
+        frameworkUrl: buildUrl + "/UNimoba.framework.js",
+        codeUrl: buildUrl + "/UNimoba.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "unicame",
+        productName: "unic",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
